Not 100%, but still OK

--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -163,6 +163,11 @@
   .fill-svg {
     fill: antiquewhite;
   }
+
+  .container-contact {
+    background-color: rgba(250,235,215, .1);
+  }
+  
 }
 
 
@@ -324,17 +329,6 @@ nav a h2:hover {
     margin-left: 2rem;
   }
 }
-
-
-
-
-
-
-
-
-
-
-
 
 
 
