Minor CSS changes

--- a/src/styles/_media-query.scss
+++ b/src/styles/_media-query.scss
@@ -929,6 +929,7 @@
     }
     .project-images-resize {
       width: 330px;
+      margin-left: -1.3rem;
     }
     .tools-icons-positioning {
       flex-wrap: wrap;
@@ -946,7 +947,7 @@
       }
     }
     details summary {
-      width: 90%;
+      width: 93%;
     }
     details summary::after {
       font-size: 2rem;
